tests/ui/macros/derive-in-eager-expansion-hang.stderr
error: format argument must be a string literal
  --> $DIR/derive-in-eager-expansion-hang.rs:4:5
   |
LL | /     {
LL | |         #[derive(Clone)]
LL | |         struct S;
...  |
LL | |     }
   | |_____^
...
LL |       format_args!(hang!());
   |                    ------- in this macro invocation
   |
   = note: this error originates in the macro `hang` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you might be missing a string literal to format with
   |
LL |     format_args!("{}", hang!());
   |                  +++++

error: aborting due to 1 previous error

